fix layout bug

--- a/src/services/ForProgramRouting/ForProgramRouting.css
+++ b/src/services/ForProgramRouting/ForProgramRouting.css
@@ -1,6 +1,6 @@
 .fixed {
   position: fixed;
-  bottom: 10px;
+  bottom: -100px;
   opacity: 0;
 }
 
